--- a/.travis.yml
+++ b/.travis.yml
@@ -5,32 +5,33 @@ dist: trusty
 
 language: python
 python:
-- '2.7'
+  - '2.7'
 
 virtualenv:
   system_site_packages: true
 before_install:
-- sudo apt-get update -qq
-- sudo apt-get install --yes rng-tools
-- sudo rm -f /dev/random
-- sudo mknod -m 0666 /dev/random c 1 9
-- echo HRNGDEVICE=/dev/urandom | sudo tee /etc/default/rng-tools
-- sudo /etc/init.d/rng-tools restart
+  - sudo apt-get update -qq
+  - sudo apt-get install --yes rng-tools
+  - sudo rm -f /dev/random
+  - sudo mknod -m 0666 /dev/random c 1 9
+  - echo HRNGDEVICE=/dev/urandom | sudo tee /etc/default/rng-tools
+  - sudo /etc/init.d/rng-tools restart
+  - sudo gem install --no-user-install sass
 install:
-- pip install ansible==1.8.4
-- pip install coveralls
+  - pip install ansible==1.8.4
+  - pip install coveralls
 script:
-- echo localhost > inventory
-- ansible-playbook -i inventory -vv --syntax-check install_files/ansible-base/securedrop-travis.yml
-- ansible-playbook -i inventory -vv --connection=local --sudo --skip-tags=non-development install_files/ansible-base/securedrop-travis.yml
-  # For some reason, redis-server does not start automatically when installed
-  # on Travis. I believe Travis' service machinery may be interfering. See
-  # http://docs.travis-ci.com/user/database-setup/#Redis
-- sudo service redis-server start
-  # travis needs the config.py file ran owned by root in other environments it is the
-  # securedrop_user default www-data
-- sudo chown root:root securedrop/config.py
-- sudo sh -c "export DISPLAY=:1; cd securedrop && ./manage.py test"
+  - echo localhost > inventory
+  - ansible-playbook -i inventory -vv --syntax-check install_files/ansible-base/securedrop-travis.yml
+  - ansible-playbook -i inventory -vv --connection=local --sudo --skip-tags=non-development install_files/ansible-base/securedrop-travis.yml
+    # For some reason, redis-server does not start automatically when installed
+    # on Travis. I believe Travis' service machinery may be interfering. See
+    # http://docs.travis-ci.com/user/database-setup/#Redis
+  - sudo service redis-server start
+    # travis needs the config.py file ran owned by root in other environments it is the
+    # securedrop_user default www-data
+  - sudo chown root:root securedrop/config.py
+  - sudo sh -c "export DISPLAY=:1; cd securedrop && ./manage.py test"
 after_success:
   cd securedrop && coveralls
 notifications:
