--- a/install_files/ansible-base/roles/development/tasks/main.yml
+++ b/install_files/ansible-base/roles/development/tasks/main.yml
@@ -31,13 +31,18 @@
   tags:
     - development
 
-# necessary for automated tests
 - name: Compile sass to css
-  shell: sass --update sass:static/css
+  shell: >
+    if [ -d /home/travis ]; then
+      /home/travis/.rvm/bin/rvm install 2.3.0 &&
+      /home/travis/.rvm/bin/rvm use 2.3.0 &&
+      gem install sass &&
+      $(find /home/travis/.rvm -name sass | grep /bin/sass | head -1) --update sass:static/css
+    else 
+      sass --update sass:static/css
+    fi
   args:
     chdir: '{{ securedrop_repo  }}/securedrop'
-  tags:
-    - development
 
 # TODO: Probably better to set this env var in /etc/profile.d,
 # since it doesn't need to be set ONLY for the securedrop user.
