--- a/install_files/ansible-base/roles/development/tasks/main.yml
+++ b/install_files/ansible-base/roles/development/tasks/main.yml
@@ -37,8 +37,9 @@
       /home/travis/.rvm/bin/rvm install 2.3.0 &&
       /home/travis/.rvm/bin/rvm use 2.3.0 &&
       gem install sass &&
+      gem install --user-install executable-hooks &&
       $(find /home/travis/.rvm -name sass | grep /bin/sass | head -1) --update sass:static/css
-    else 
+    else
       sass --update sass:static/css
     fi
   args:
