--- a/install_files/ansible-base/roles/development/tasks/main.yml
+++ b/install_files/ansible-base/roles/development/tasks/main.yml
@@ -34,8 +34,8 @@
 - name: Compile sass to css
   shell: >
     if [ -d /home/travis ]; then
-      /home/travis/.rvm/bin/rvm install 1.9.0 &&
-      bash -l -c "/home/travis/.rvm/bin/rvm use 1.9.0" &&
+      /home/travis/.rvm/bin/rvm install 2.1.0 &&
+      bash -l -c "/home/travis/.rvm/bin/rvm use 2.1.0" &&
       gem install sass &&
       gem install executable-hooks &&
       $(find /home/travis/.rvm -name sass | grep /bin/sass | head -1) --update sass:static/css
@@ -43,7 +43,7 @@
       sass --update sass:static/css
     fi
   environment:
-    PATH: /root/.gem/ruby/1.9.1/bin:{{ ansible_env.PATH }}
+    PATH: /root/.gem/ruby/1.9.1/bin:/root/.gem/ruby/2.1.0/bin:{{ ansible_env.PATH }}
   args:
     chdir: '{{ securedrop_repo  }}/securedrop'
 
