--- a/install_files/ansible-base/roles/development/tasks/main.yml
+++ b/install_files/ansible-base/roles/development/tasks/main.yml
@@ -37,13 +37,13 @@
       /home/travis/.rvm/bin/rvm install 2.1.0 &&
       bash -l -c "/home/travis/.rvm/bin/rvm use 2.1.0" &&
       gem install sass &&
-      sudo gem install --user-install executable-hooks &&
+      gem install executable-hooks &&
       $(find /home/travis/.rvm -name sass | grep /bin/sass | head -1) --update sass:static/css
     else
       sass --update sass:static/css
     fi
   environment:
-    PATH: /root/.gem/ruby/1.9.1/bin:/root/.gem/ruby/2.1.0/bin:{{ ansible_env.PATH }}
+    PATH: /root/.gem/ruby/2.1.0/bin:{{ ansible_env.PATH }}
   args:
     chdir: '{{ securedrop_repo  }}/securedrop'
 
